<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/authorizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="authorize"
        android:text="@string/authorize"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:onClick="start"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/authorizeButton" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:onClick="stop"
        android:text="@string/stop"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/startButton" />

    <TextView
        android:id="@+id/frequencyText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/lb_control_button_secondary_height"
        android:layout_marginStart="8dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/stopButton"
        android:gravity="center" />

    <SeekBar
        android:id="@+id/frequencyBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lb_control_button_secondary_height"
        android:layout_marginStart="8dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/frequencyText"
        android:labelFor="@id/frequencyText"
        android:max="59"
        android:progress="0" />

</RelativeLayout>